--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - swiftlint
 matrix:
   include:
-    - env: PLATFORM=macOS
-    - env: PLATFORM=iOS
+    - env: PLATFORM=macOS DESTINATION='platform=OS X,arch=x86_64'
+    - env: PLATFORM=iOS DESTINATION='platform=iOS Simulator,name=iPhone 6'
 script:
-  - xcodebuild -project RxSpriteKit.xcodeproj -scheme RxSpriteKitDemo-$PLATFORM
+  - xcodebuild -project RxSpriteKit.xcodeproj -scheme RxSpriteKitDemo-$PLATFORM -destination $DESTINATION
