--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ matrix:
     - env: PLATFORM=macOS DESTINATION='platform=macOS,arch=x86_64'
     - env: PLATFORM=iOS DESTINATION='platform=iOS Simulator,name=iPhone 6'
 script:
-  - xcodebuild -project RxSpriteKit.xcodeproj -scheme RxSpriteKitDemo-$PLATFORM -destination '${DESTINATION}'
+  - xcodebuild -project RxSpriteKit.xcodeproj -scheme RxSpriteKitDemo-$PLATFORM -destination "${DESTINATION}"
