Add CI container for tvOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   include:
     - env: PLATFORM=macOS DESTINATION='platform=macOS,arch=x86_64'
     - env: PLATFORM=iOS DESTINATION='platform=iOS Simulator,name=iPhone 6'
+    - env: PLATFORM=tvOS DESTINATION='platform=tvOS Simulator,name=Apple TV'
 script:
   - xcodebuild test -project RxSpriteKit.xcodeproj -scheme RxSpriteKitTests-$PLATFORM -destination "${DESTINATION}"
   - xcodebuild -project RxSpriteKit.xcodeproj -scheme RxSpriteKitDemo-$PLATFORM -destination "${DESTINATION}"
