--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
     - Carthage/
 install:
-  - carthage update --platform $PLATFORM
+  - carthage update
 before_script: 
   - swiftlint
 matrix:
